--- a/rcproject/View/AboutUs.xaml
+++ b/rcproject/View/AboutUs.xaml
@@ -3,8 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="rcproject.View.AboutUs"
              xmlns:v="clr-namespace:rcproject.View"
+             Title="UKRCCA"
              >
     <VerticalStackLayout>
+        <Image Source="aboutus.jpg"
+               Margin="0"
+               Aspect="Fill"
+               
+               />
         <Label 
             Text="Welcome to .NET MAUI!"
             TextColor="#006700"
