--- a/rcproject/View/CreateCompetitions.xaml
+++ b/rcproject/View/CreateCompetitions.xaml
@@ -26,7 +26,7 @@
                Text="{Binding JoinCode}"/>
 
         <Image Source="{Binding MapsImageUrl}" 
-               IsVisible="{Binding MapsImageUrl, Converter={StaticResource NullToVisibilityConverter}}" 
+               IsVisible="{Binding MapsImageUrl}" 
                Aspect="AspectFit"/>
 
         <Button Text="Create Competition +" 
